@@ -1,5 +1,6 @@
 package co.unruly.control.result;
 
+import co.unruly.control.ConsumableFunction;
 import co.unruly.control.Lists;
 import co.unruly.control.pair.Comprehensions;
 import co.unruly.control.pair.Pair;
@@ -28,46 +29,43 @@ import static java.util.Arrays.asList;
 import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.hasItems;
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertThat;
+import static org.junit.Assert.*;
 import static org.mockito.Mockito.*;
 
-
+@SuppressWarnings("unchecked")
 public class ResultsTest {
 
     @Test
     public void canCreateSuccess() {
         Result<Integer, String> shouldBeSuccess = success(5);
-
-        assertThat(shouldBeSuccess.either(success -> true, failure -> false), is(true));
+        Boolean isSuccess = shouldBeSuccess.either(success -> true, failure -> false);
+        assertTrue(isSuccess);
     }
 
     @Test
     public void canCreateFailure() {
         Result<Integer, String> shouldFail = failure("oh poop");
-
-        assertThat(shouldFail.either(success -> true, failure -> false), is(false));
+        assertFalse(shouldFail.either(success -> true, failure -> false));
     }
 
     @Test
     public void canReduceResultToValue() {
         Result<Integer, String> success = success(5);
         Result<Integer, String> failure = failure("i blew up");
-
-        assertThat(success.either(
+        String successString = success.either(
                 succ -> String.format("I got %d out of this Result", succ),
-                err -> err),
-            is("I got 5 out of this Result"));
-
-        assertThat(failure.either(
+                err -> err);
+        String failString = failure.either(
                 succ -> String.format("I got %d out of this Result", succ),
-                err -> err),
-            is("i blew up"));
+                err -> err);
+        assertEquals(successString, "I got 5 out of this Result");
+        assertEquals(failString, "i blew up");
     }
 
     @Test
     public void canDoSideEffectsOnCorrectSideForSuccess() {
-        final Consumer<Integer> successCallback = mock(Consumer.class);
-        final Consumer<String> failureCallback = mock(Consumer.class);
+        final Consumer<Integer> successCallback = (Consumer<Integer>) mock(Consumer.class);
+        final Consumer<String> failureCallback = (Consumer<String>) mock(Consumer.class);
 
         Result<Integer, String> success = success(5);
 
@@ -76,22 +74,22 @@ public class ResultsTest {
             .then(onFailureDo(failureCallback));
 
         verify(successCallback).accept(5);
-        verifyZeroInteractions(failureCallback);
+        verifyNoInteractions(failureCallback);
     }
 
     @Test
     public void canDoSideEffectsOnCorrectSideForFailure() {
-        final Consumer<Integer> successCallback = mock(Consumer.class);
-        final Consumer<String> failureCallback = mock(Consumer.class);
+        final Consumer<Integer> successCallback = (Consumer<Integer>) mock(Consumer.class);
+        final Consumer<String> failureCallback = (Consumer<String>) mock(Consumer.class);
 
         Result<Integer, String> failure = failure("oops");
-
+        ConsumableFunction<Result<Integer, String>> failureDo = onFailureDo(failureCallback);
         failure
             .then(onSuccessDo(successCallback))
-            .then(onFailureDo(failureCallback));
+            .then(failureDo);
 
         verify(failureCallback).accept("oops");
-        verifyZeroInteractions(successCallback);
+        verifyNoInteractions(successCallback);
     }
 
     @Test
@@ -104,9 +102,10 @@ public class ResultsTest {
         final Result<Integer, String> failure = failure("Cannot parse number");
 
 
-        assertThat(six.then(attempt(halve)), isSuccessOf(3));
-        assertThat(five.then(attempt(halve)), isFailureOf("Cannot halve an odd number into an integer"));
-        assertThat(failure.then(attempt(halve)), isFailureOf("Cannot parse number"));
+        assertTrue(isSuccessOf(3).matches(six.then(attempt(halve))));
+        assertTrue(isFailureOf("Cannot halve an odd number into an integer")
+                .matches(five.then(attempt(halve))));
+        assertTrue(isFailureOf("Cannot parse number").matches(failure.then(attempt(halve))));
     }
 
     @Test
@@ -117,8 +116,8 @@ public class ResultsTest {
         final Result<Integer, String> twelve = six.then(onSuccess(x -> x * 2));
         final Result<Integer, String> stillFailure = failure.then(onSuccess(x -> x * 2));
 
-        assertThat(twelve, isSuccessOf(12));
-        assertThat(stillFailure, is(failure));
+        assertTrue(isSuccessOf(12).matches(twelve));
+        assertTrue(is(failure).matches(stillFailure));
     }
 
     @Test
@@ -129,8 +128,8 @@ public class ResultsTest {
         final Result<Integer, String> stillSix = six.then(onFailure(String::toLowerCase));
         final Result<Integer, String> lowerCaseFailure = failure.then(onFailure(String::toLowerCase));
 
-        assertThat(stillSix, Is.is(success(6)));
-        assertThat(lowerCaseFailure, Is.is(failure("cannot parse number")));
+        assertTrue(Is.is(success(6)).matches(stillSix));
+        assertTrue(Is.is(failure("cannot parse number")).matches(lowerCaseFailure));
     }
 
     @Test
@@ -141,18 +140,19 @@ public class ResultsTest {
         Result<Long, String> parsedSix = six.then(onSuccessTry(Long::parseLong, Exception::toString));
         Result<Long, String> parsedNaN = notANumber.then(onSuccessTry(Long::parseLong, Exception::toString));
 
-        assertThat(parsedSix, Is.is(success(6L)));
-        assertThat(parsedNaN, Is.is(failure("java.lang.NumberFormatException: For input string: \"NaN\"")));
+        assertTrue(Is.is(success(6L)).matches(parsedSix));
+        assertTrue(Is.is(failure("java.lang.NumberFormatException: For input string: \"NaN\"")).matches(parsedNaN));
     }
 
     @Test
     public void canStreamSuccesses() {
-        Stream<Result<Integer, String>> results = Stream.of(success(6), success(5), failure("darnit"));
+        Stream<Result<Integer, String>> results
+                = Stream.of(success(6), success(5), failure("darnit"));
 
         Stream<Integer> resultStream = results.flatMap(successes());
         List<Integer> successes = resultStream.collect(toList());
 
-        assertThat(successes, hasItems(6, 5));
+        assertTrue(hasItems(6, 5).matches(successes));
     }
 
     @Test
@@ -163,45 +163,55 @@ public class ResultsTest {
         Result<Integer, String> oddFive = Result.failure("Five is odd");
         Result<Integer, String> oddSeven = Result.failure("Seven is odd");
 
-        assertThat(evenSix.then(combineWith(evenTwo)).using((x, y) -> x * y), isSuccessOf(12));
-        assertThat(evenSix.then(combineWith(oddSeven)).using((x, y) -> x * y), isFailureOf("Seven is odd"));
-        assertThat(oddFive.then(combineWith(evenTwo)).using((x, y) -> x * y), isFailureOf("Five is odd"));
-        assertThat(oddFive.then(combineWith(oddSeven)).using((x, y) -> x * y), isFailureOf("Five is odd"));
+        assertTrue(isSuccessOf(12)
+                .matches(evenSix.then(combineWith(evenTwo)).using((x, y) -> x * y)));
+        assertTrue(isFailureOf("Seven is odd")
+                .matches(evenSix.then(combineWith(oddSeven)).using((x, y) -> x * y)));
+        assertTrue(isFailureOf("Five is odd")
+                .matches(oddFive.then(combineWith(evenTwo)).using((x, y) -> x * y)));
+        assertTrue(isFailureOf("Five is odd")
+                .matches(oddFive.then(combineWith(oddSeven)).using((x, y) -> x * y)));
     }
 
     @Test
     public void canStreamFailures() {
-        Stream<Result<Integer, String>> results = Stream.of(success(6), success(5), failure("darnit"));
+        Stream<Result<Integer, String>> results
+                = Stream.of(success(6), success(5), failure("darnit"));
 
-        List<String> failures = results.flatMap(failures()).collect(toList());
+        List<String> failures = results.flatMap(failures()).toList();
 
-        assertThat(failures, hasItems("darnit"));
+        assertTrue(failures.contains("darnit"));
     }
 
     @Test
     public void canExtractValuesFromMap() {
         Map<String, Integer> frenchNumberNames = mapOf(entry("un", 1), entry("deux", 2), entry("trois", 3));
 
-        Function<String, Result<Integer, String>> extractor = fromMap(frenchNumberNames, word -> String.format("%s is not a french number", word));
-
-        assertThat(extractor.apply("deux"), isSuccessOf(2));
-        assertThat(extractor.apply("quattro"), isFailureOf("quattro is not a french number"));
+        Function<String, Result<Integer, String>> extractor
+                = fromMap(frenchNumberNames, word -> String.format("%s is not a french number", word));
+        var outcome = extractor.apply("deux");
+        var successOfTwo = isSuccessOf(2);
+        assertTrue(successOfTwo.matches(outcome));
+        assertTrue(isFailureOf("quattro is not a french number")
+                .matches(extractor.apply("quattro")));
     }
 
     @Test
     public void canConvertListOfResultsIntoResultOfList() {
-        List<Result<Integer, String>> results = asList(success(1), success(42), success(69));
+        List<Result<Integer, String>> results
+                = asList(success(1), success(42), success(69));
         Result<List<Integer>, List<String>> unwrapped = Lists.successesOrFailures(results);
 
-        assertThat(unwrapped, isSuccessOf(asList(1, 42, 69)));
+        assertTrue(isSuccessOf(asList(1, 42, 69)).matches(unwrapped));
     }
 
     @Test
     public void canConvertListOfResultsIntoFailureOfListOfReasons() {
-        List<Result<Integer, String>> results = asList(success(1), failure("cheese"), success(69), failure("hotdog"));
+        List<Result<Integer, String>> results
+                = asList(success(1), failure("cheese"), success(69), failure("hotdog"));
         Result<List<Integer>, List<String>> unwrapped = Lists.successesOrFailures(results);
 
-        assertThat(unwrapped, isFailureOf(asList("cheese", "hotdog")));
+        assertTrue(isFailureOf(asList("cheese", "hotdog")).matches(unwrapped));
     }
 
     @Test
@@ -217,7 +227,7 @@ public class ResultsTest {
             .flatMap(successes())
             .collect(toList());
 
-        assertThat(halvedNumbers, hasItems(3L));
+        assertTrue(hasItems(3L).matches(halvedNumbers));
 
         verify(failureCallback).accept("java.lang.NumberFormatException: For input string: \"NaN\"");
         verify(failureCallback).accept("5 is odd");
@@ -225,7 +235,6 @@ public class ResultsTest {
     }
 
     @Test
-    @SuppressWarnings("unchecked")
     public void exampleSplitResults() {
         Stream<String> inputs = Stream.of("6", "5", "NaN");
 
@@ -234,8 +243,9 @@ public class ResultsTest {
                 .map(attempt(x -> x % 2 == 0 ? success(x / 2) : failure(x + " is odd")))
                 .collect(split());
 
-        assertThat(halvedNumbers.left, hasItems(3L));
-        assertThat(halvedNumbers.right, hasItems("java.lang.NumberFormatException: For input string: \"NaN\"", "5 is odd"));
+        assertTrue(hasItems(3L).matches(halvedNumbers.left()));
+        assertTrue(hasItems("java.lang.NumberFormatException: For input string: \"NaN\"", "5 is odd")
+                .matches(halvedNumbers.right()));
     }
 
     @Test
@@ -247,7 +257,7 @@ public class ResultsTest {
             )
             .then(ifAllSucceeded((x, y) -> x + " = " + y));
 
-        assertThat(actualResult, isSuccessOf("Yay! = 123"));
+        assertTrue(isSuccessOf("Yay! = 123").matches(actualResult));
     }
 
     @Test
@@ -257,7 +267,7 @@ public class ResultsTest {
             failure("No!")
         ).then(ifAllSucceeded((x, y) -> x + " = " + y));
 
-        assertThat(result, isFailureOf("No!"));
+        assertTrue(isFailureOf("No!").matches(result));
     }
 
     @Test
@@ -268,7 +278,7 @@ public class ResultsTest {
             success("boo")
         ).then(ifAllSucceeded((x, y, z) -> x + " " + y + " " + z));
 
-        assertThat(song, isSuccessOf("bibbidy bobbidy boo"));
+        assertTrue(isSuccessOf("bibbidy bobbidy boo").matches(song));
     }
 
     @Test
@@ -279,7 +289,7 @@ public class ResultsTest {
             failure("nooo")
         ).then(ifAllSucceeded((x, y, z) -> x + " " + y + " " + z));
 
-        assertThat(uhoh, isFailureOf("no"));
+        assertTrue(isFailureOf("no").matches(uhoh));
     }
 
     @Test
@@ -291,7 +301,7 @@ public class ResultsTest {
             success("YesYesYesYes")
         ).then(ifAllSucceeded((a, b, c, d) -> a + b + c + d));
 
-        assertThat(result, isSuccessOf("YesYesYesYesYesYesYesYesYesYes"));
+        assertTrue(isSuccessOf("YesYesYesYesYesYesYesYesYesYes").matches(result));
     }
 
     @Test
@@ -303,6 +313,6 @@ public class ResultsTest {
             failure("NoNo") // There's no limit
         ).then(ifAllSucceeded((a, b, c, d) -> a + b + c + d));
 
-        assertThat(result, isFailureOf("NoNo"));
+        assertTrue(isFailureOf("NoNo").matches(result));
     }
 }
